--- a/proofs.tex
+++ b/proofs.tex
@@ -1460,6 +1460,10 @@ $1$  % $x$
     \end{itemize}
 \end{frame}
 
+\begin{frame}{Then Again\ldots}
+    \centering\includegraphics[keepaspectratio=true,scale=0.25]{roundabout.png}
+\end{frame}
+
 {
     \usebackgroundtemplate{
         \tikz[overlay, remember picture]
